--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,9 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Invoices List
+appTitle=Invoices
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=Invoices List
+selectionScreen=Pantalla de Selección
+country=País
